all section gap margin responsive issue fixed

--- a/src/app/(landing-page)/(shared-section)/landing-page-style.css
+++ b/src/app/(landing-page)/(shared-section)/landing-page-style.css
@@ -15,13 +15,11 @@
 .hero-section .hero-image{
     @apply rounded-md grayscale hover:grayscale-0 mx-auto duration-1000;
 }
-
 .mouse-scroll-anim-area{
-    @apply absolute top-1/3 md:top-auto -right-[12%] md:right-auto md:bottom-2 md:left-1/2 transform -translate-x-1/2;
+    @apply absolute bottom-[10%] md:bottom-2 left-1/2 transform -translate-x-1/2;
 }
-
 .social-network-icons{
-    @apply absolute
+    @apply absolute;
 }
 
 /* hero section end */
